# mitsuba-path-guiding

./: .gitignore  CMakeLists.txt  build_dependencies.sh  build_mitsuba.sh  setpath.sh
data/cmake/: FindGLEW.cmake  FindTBB.cmake  MitsubaBuildOptions.cmake  MitsubaExternal.cmake  MitsubaUtil.cmake
data/cmake/packaging/: CMakeLists.txt
include/mitsuba/core/: bitmap.h  sse.h  thread.h  util.h
include/mitsuba/render/: bsdf.h  denoiser.h  film.h  imageblock.h  integrator.h  progressiveintegrator.h
src/bsdfs/: blendbsdf.cpp  bumpmap.cpp  coating.cpp  conductor.cpp  dielectric.cpp  difftrans.cpp  diffuse.cpp  hk.cpp  irawan.cpp  mask.cpp  mixturebsdf.cpp  normalmap.cpp  phong.cpp  plastic.cpp  roughcoating.cpp  roughconductor.cpp  roughdielectric.cpp  roughdiffuse.cpp  roughplastic.cpp  thindielectric.cpp  torrance.cpp  twosided.cpp  ward.cpp
src/films/: CMakeLists.txt  hdrfilm.cpp
src/integrators/: CMakeLists.txt
src/integrators/erpt/: erpt_proc.cpp
src/integrators/guiding/: GuidedBSDF.h  GuidedPhaseFunction.h  GuidedRussianRouletteAndSplitting.h  GuidingHelper.h  progressive_guidedpath.cpp  progressive_guidedvolpath.cpp
src/integrators/guiding/distance/: DistanceSamplingTechiques.h  IncrementalGuidedProductDistanceSampler.h  StandardDistanceSampler.h  VolumeRadianceStepper.h
src/integrators/path/: progressive_path.cpp  progressive_volpath.cpp  volpath.cpp
src/libbidir/: pathsampler.cpp
src/libcore/: bitmap.cpp  chisquare.cpp  logger.cpp  quad.cpp  spectrum.cpp  thread.cpp  util.cpp  vmf.cpp
src/libhw/: glprogram.cpp  glrenderer.cpp
src/libpython/: CMakeLists.txt  render.cpp
src/librender/: CMakeLists.txt  denoiser.cpp  progressiveintegrator.cpp  scene.cpp
src/medium/: heterogeneous.cpp
src/mitsuba/: CMakeLists.txt
src/mtsgui/: CMakeLists.txt
src/mtsgui/resources/: docs.xml
src/phase/: microflake_fiber.h
src/samplers/: CMakeLists.txt  deterministic.cpp  independent.cpp  ldsampler.cpp
src/shapes/: CMakeLists.txt
src/shapes/ply/: byte_order.hpp
src/tests/: test_chisquare.cpp  test_microfacet.cpp  test_quad.cpp  test_rtrans.cpp
src/utils/: CMakeLists.txt  rdielprec.cpp  scene2obj.cpp  serialized2obj.cpp
src/volume/: CMakeLists.txt  vdbvolume.cpp
superbuild/: CMakeLists.txt
superbuild/cmake/: dep_blosc.cmake  dep_boost.cmake  dep_eigen.cmake  dep_freeglut.cmake  dep_glew.cmake  dep_ispc.cmake  dep_jpeg.cmake  dep_oidn.cmake  dep_openexr.cmake  dep_openpgl.cmake  dep_png.cmake  dep_vdb.cmake  dep_xerces.cmake
